Update forum features and add Tomcat configuration