@@ -1,4 +1,4 @@
-package com.example.demo.model;
+package com.example.model;
 
 import java.util.*;
 
@@ -10,20 +10,45 @@ public class Appointment {
     private String time;
     private String status;
 
-    public int getId() { return id; }
-    public void setId(int id) { this.id = id; }
+    public int getId() {
+        return id;
+    }
 
-    public String getCounselorName() { return counselorName; }
-    public void setCounselorName(String counselorName) { this.counselorName = counselorName; }
+    public void setId(int id) {
+        this.id = id;
+    }
 
-    public String getDate() { return date; }
-    public void setDate(String date) { this.date = date; }
+    public String getCounselorName() {
+        return counselorName;
+    }
 
-    public String getTime() { return time; }
-    public void setTime(String time) { this.time = time; }
+    public void setCounselorName(String counselorName) {
+        this.counselorName = counselorName;
+    }
 
-    public String getStatus() { return status; }
-    public void setStatus(String status) { this.status = status; }
+    public String getDate() {
+        return date;
+    }
+
+    public void setDate(String date) {
+        this.date = date;
+    }
+
+    public String getTime() {
+        return time;
+    }
+
+    public void setTime(String time) {
+        this.time = time;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
 
     public static List<Appointment> mockAppointments() {
         Appointment a = new Appointment();
@@ -32,7 +57,7 @@ public class Appointment {
         a.setDate("8 Nov 2025");
         a.setTime("10:00 AM");
         a.setStatus("upcoming");
-        return List.of(a);
+        return Arrays.asList(a);
     }
 
     public static List<Appointment> mockCompletedAppointments() {
@@ -42,6 +67,6 @@ public class Appointment {
         a.setDate("5 Nov 2025");
         a.setTime("2:00 PM");
         a.setStatus("completed");
-        return List.of(a);
+        return Arrays.asList(a);
     }
 }
